[gd_scene load_steps=19 format=3 uid="uid://caxeh081dj7m8"]

[ext_resource type="Texture2D" uid="uid://c411wji2n6f6x" path="res://Sprites/Character/explosion.png" id="1_5lgdq"]
[ext_resource type="Script" path="res://robot.gd" id="1_7ggk5"]
[ext_resource type="AudioStream" uid="uid://mt4rfqg4nand" path="res://Audio/SFX/Enemies/EnemyHurt-001.wav" id="2_0bu2d"]
[ext_resource type="Texture2D" uid="uid://bluvyuckfdsil" path="res://Sprites/Character/Sprite-0001.png" id="2_n6ufw"]
[ext_resource type="AudioStream" uid="uid://b088lotldv37b" path="res://Audio/SFX/Enemies/RobotPiipSoft.wav" id="4_gqvd8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_g0x4k"]
atlas = ExtResource("1_5lgdq")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2gpd7"]
atlas = ExtResource("1_5lgdq")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2bxv0"]
atlas = ExtResource("1_5lgdq")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ckvv"]
atlas = ExtResource("2_n6ufw")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_63yuq"]
atlas = ExtResource("2_n6ufw")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_f0fdg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0x4k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gpd7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2bxv0")
}],
"loop": true,
"name": &"Die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ckvv")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_63yuq")
}],
"loop": true,
"name": &"Shoot",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_p072c"]
resource_name = "Die"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Die"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_auljt"]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_d8tml"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_v6bx1"]
resource_name = "shoot"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Shoot"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_biw7s"]
_data = {
"Die": SubResource("Animation_p072c"),
"Idle": SubResource("Animation_auljt"),
"RESET": SubResource("Animation_d8tml"),
"shoot": SubResource("Animation_v6bx1")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sytlp"]
size = Vector2(459, 108)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ft5mh"]
size = Vector2(22, 24)

[node name="RobotEnemy" type="CharacterBody2D"]
script = ExtResource("1_7ggk5")

[node name="RoboHurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_0bu2d")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_gqvd8")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_f0fdg")
animation = &"Idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_biw7s")
}
autoplay = "Idle"

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(-4, -1)
shape = SubResource("RectangleShape2D_sytlp")

[node name="BulletSpawnPoint" type="Node2D" parent="."]
position = Vector2(20, 0)

[node name="BulletSpawnPoint2" type="Node2D" parent="."]
position = Vector2(-20, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4, 2)
shape = SubResource("RectangleShape2D_ft5mh")

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
